src/objects/BGA_PO_Tracker_Entry__c/BGA_PO_Tracker_Entry__c.object-meta.xml
<CustomObject>
    <label>PO Tracker Option</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Record #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PO Tracker Options</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>