src/objects/BGA_PO_Tracker_Entry__c/fields/BGA_Purchase_Order__c.field-meta.xml
<CustomField>
    <fullName>BGA_Purchase_Order__c</fullName>
    <label>PO Tracker</label>
    <referenceTo>BGA_PO_Tracker__c</referenceTo>
    <relationshipLabel>PO Tracker Options</relationshipLabel>
    <relationshipName>PO_Tracker_Options</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>