src/objects/BGA_PO_Tracker_Entry__c/fields/RMU_Config_Detail_Name__c.field-meta.xml
<CustomField>
    <fullName>RMU_Config_Detail_Name__c</fullName>
    <label>RMU Detail Name</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>RMU_Name__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>ADM Opt 4</fullName>
                <color>#78C953</color>
                <label>ADM Opt 4</label>
            </value>
            <value>
                <fullName>ADSB-Out Opt 2</fullName>
                <color>#A845DC</color>
                <label>ADSB-Out Opt 2</label>
            </value>
            <value>
                <fullName>ADS-B out V1</fullName>
            </value>
            <value>
                <fullName>ADS-B out V2</fullName>
                <color>#E27001</color>
                <label>ADS-B out V2</label>
            </value>
            <value>
                <fullName>AIS2000</fullName>
                <color>#F3D904</color>
                <label>AIS2000</label>
            </value>
            <value>
                <fullName>AMT700</fullName>
            </value>
            <value>
                <fullName>Baseline</fullName>
                <color>#A53711</color>
                <label>Baseline</label>
            </value>
            <value>
                <fullName>Baseline Only</fullName>
                <color>#66E9BD</color>
                <label>Baseline Only</label>
            </value>
            <value>
                <fullName>Basic</fullName>
                <color>#0B24BE</color>
                <label>Basic</label>
            </value>
            <value>
                <fullName>CDSR</fullName>
                <color>#419249</color>
                <label>CDSR</label>
            </value>
            <value>
                <fullName>Cert F</fullName>
                <color>#B6E32E</color>
                <label>Cert F</label>
            </value>
            <value>
                <fullName>Cert G</fullName>
                <color>#641CCF</color>
                <label>Cert G</label>
            </value>
            <value>
                <fullName>CGCR</fullName>
                <color>#F96FB7</color>
                <label>CGCR</label>
            </value>
            <value>
                <fullName>CNX200</fullName>
            </value>
            <value>
                <fullName>CPDLC</fullName>
                <color>#2F5D85</color>
                <label>CPDLC</label>
            </value>
            <value>
                <fullName>CPDLC ATN</fullName>
            </value>
            <value>
                <fullName>CPDLC FANS 1/A</fullName>
            </value>
            <value>
                <fullName>CVR</fullName>
                <color>#AFCADF</color>
                <label>CVR</label>
            </value>
            <value>
                <fullName>DL 950</fullName>
            </value>
            <value>
                <fullName>DU875</fullName>
                <color>#8F6429</color>
                <label>DU875</label>
            </value>
            <value>
                <fullName>DU885</fullName>
                <color>#EFAE73</color>
                <label>DU885</label>
            </value>
            <value>
                <fullName>Dual RAAS</fullName>
                <color>#57F17C</color>
                <label>Dual RAAS</label>
            </value>
            <value>
                <fullName>E-NAV</fullName>
                <color>#0B6FCE</color>
                <label>E-NAV</label>
            </value>
            <value>
                <fullName>Enhanced Nav Opt 1</fullName>
                <color>#78C953</color>
                <label>Enhanced Nav Opt 1</label>
            </value>
            <value>
                <fullName>FANS</fullName>
            </value>
            <value>
                <fullName>FANS2</fullName>
            </value>
            <value>
                <fullName>FANS Option</fullName>
                <color>#E27001</color>
                <label>FANS Option</label>
            </value>
            <value>
                <fullName>FMS 6.1</fullName>
                <color>#A845DC</color>
                <label>FMS 6.1</label>
            </value>
            <value>
                <fullName>GD04 GPS</fullName>
                <color>#F3D904</color>
                <label>GD04 GPS</label>
            </value>
            <value>
                <fullName>HD710</fullName>
                <color>#A53711</color>
                <label>HD710</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>