src/objects/BGA_PO_Tracker_Entry__c/fields/RMU_Date__c.field-meta.xml
<CustomField>
    <fullName>RMU_Date__c</fullName>
    <label>Finance Date</label>
    <type>Date</type>
</CustomField>