src/objects/BGA_PO_Tracker_Entry__c/fields/RMU_Name__c.field-meta.xml
<CustomField>
    <fullName>RMU_Name__c</fullName>
    <label>RMU Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ADS B</fullName>
            </value>
            <value>
                <fullName>AIS2000</fullName>
            </value>
            <value>
                <fullName>AMT700</fullName>
            </value>
            <value>
                <fullName>Batch 3</fullName>
            </value>
            <value>
                <fullName>CDSR</fullName>
            </value>
            <value>
                <fullName>Cert D - G450/G550</fullName>
            </value>
            <value>
                <fullName>Cert E - G450/G550</fullName>
            </value>
            <value>
                <fullName>Cert F - G450/G550</fullName>
            </value>
            <value>
                <fullName>Cert G/H - G450/G550</fullName>
            </value>
            <value>
                <fullName>CGCR</fullName>
            </value>
            <value>
                <fullName>CNX200</fullName>
            </value>
            <value>
                <fullName>DL 950</fullName>
            </value>
            <value>
                <fullName>DU875</fullName>
            </value>
            <value>
                <fullName>DU885</fullName>
            </value>
            <value>
                <fullName>Easy II</fullName>
            </value>
            <value>
                <fullName>FANS</fullName>
            </value>
            <value>
                <fullName>FMS 6.1</fullName>
            </value>
            <value>
                <fullName>G650</fullName>
            </value>
            <value>
                <fullName>HD710</fullName>
            </value>
            <value>
                <fullName>Legacy 600</fullName>
            </value>
            <value>
                <fullName>OVATION</fullName>
            </value>
            <value>
                <fullName>Smart Landing</fullName>
            </value>
            <value>
                <fullName>Smart Runway</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>